--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3636,7 +3636,7 @@ hr {
 
 /* line 113, C:/Users/HP/Desktop/jun-2020/277.Charity _Non-profit/assets/scss/_h1-hero.scss */
 .slider-area2 {
-  background-image: url(../img/hero/hero2.pnj);
+  background-image: url(../img/hero/hero2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
