--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3888,7 +3888,7 @@ hr {
   content: "";
   width: 100%;
   height: 0;
-  background: #09cc7f;
+  background: #140D4f;
   transition: .6s;
   bottom: 0;
   left: 0;
@@ -3901,7 +3901,7 @@ hr {
   margin-bottom: 50px;
   width: 90px;
   height: 90px;
-  background: #09cc7f;
+  background:#6FEDB7;
   line-height: 90px;
   text-align: center;
   border-radius: 50%;
