--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3664,7 +3664,7 @@ hr {
 
 /* line 127, C:/Users/HP/Desktop/jun-2020/277.Charity _Non-profit/assets/scss/_h1-hero.scss */
 .slider-area2 .hero-cap h2 {
-  color: #072366;
+  color: white;
   font-size: 50px;
   font-weight: 800;
   text-transform: capitalize;
