--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8313,19 +8313,7 @@ del {
 /*# sourceMappingURL=style.css.map */
 
 a {
-  color: blue;      /* muda a cor do link */
-  font-size: 12px;  /* aumenta a fonte */
-  text-decoration: underline; /* deixa sublinhado, padrão de link */
+  color: blue;     
+  font-size: 12px; 
+  text-decoration: underline;
 }
-
-
-
-/* Ct; /* Define a cor do texto como preto para garantir visibilidade */
-}
-
-
-
-.color-green {
-  color: #000000 !important; /* Define a cor do texto como preto para garantir visibilidade */
-}
-
