--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -566,7 +566,7 @@ hr {
 /* line 307, C:/Users/HP/Desktop/jun-2020/277.Charity _Non-profit/assets/scss/_common.scss */
 .header-btn {
   padding: 30px 57px;
-  background-color: #09cc7f
+  background-color: #1ed2ff;
 }
 
 /* line 310, C:/Users/HP/Desktop/jun-2020/277.Charity _Non-profit/assets/scss/_common.scss */
