--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,7 +496,7 @@ hr {
 
 /* line 245, C:/Users/HP/Desktop/jun-2020/277.Charity _Non-profit/assets/scss/_common.scss */
 .btn {
-  background: #09cc7f;
+  background: #1ed2ff;
   font-family: "Muli", sans-serif;
   text-transform: capitalize;
   padding: 27px 44px;
