--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4707,12 +4707,12 @@ hr {
   display: inline-block;
   font-weight: 700;
   text-transform: uppercase;
-  color: #fff;
+  color: #212529;
 }
 
 /* line 31, C:/Users/HP/Desktop/jun-2020/277.Charity _Non-profit/assets/scss/_count_down.scss */
 .count-down-area .count-down-wrapper .single-counter span {
-  color: #fff;
+  color: #212529;
   font-size: 24px;
 }
 
@@ -4735,7 +4735,7 @@ hr {
 
 /* line 53, C:/Users/HP/Desktop/jun-2020/277.Charity _Non-profit/assets/scss/_count_down.scss */
 .color-green {
-  color: #1e9d78;
+  color: #212529;
 }
 
 /* line 56, C:/Users/HP/Desktop/jun-2020/277.Charity _Non-profit/assets/scss/_count_down.scss */
